<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="503dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.BottomOnly"
                app:srcCompat="@drawable/intro" />

            <TextView
                android:id="@+id/Description"
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:layout_marginTop="24dp"
                android:text="@string/Description"
                android:textAlignment="center"
                android:textColor="@color/Intro"
                android:textSize="28dp"
                android:fontFamily="sans-serif"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/intro_sub"
                android:textAlignment="center"
                android:textColor="@color/darkGrey"
                android:textSize="18dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/startBtn"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:background="@drawable/brown_bg"
                android:text="Let's Get Started!"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="186dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/intro_signin"
                    android:textAlignment="textEnd"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/signin"
                    android:textAlignment="textStart"
                    android:textColor="@color/Intro"
                    android:textSize="16dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>