<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView29"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/onboarding4"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView15"
            app:layout_constraintEnd_toStartOf="@+id/imageView14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView13" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/onboarding5"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/beginbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView15"
            app:layout_constraintTop_toBottomOf="@+id/imageView14" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="412dp"
            android:layout_height="170dp"
            android:background="@drawable/brown_bg_bottom_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="389dp"
                android:layout_height="112dp"
                android:layout_marginTop="40dp"
                android:text="@string/onboarding1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/beginbtn"
            android:layout_width="235dp"
            android:layout_height="51dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/brown"
            android:text="@string/onboarding3"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView13"
            android:layout_width="252dp"
            android:layout_height="251dp"
            android:layout_marginTop="4dp"
            android:adjustViewBounds="true"
            android:background="@color/categorybtn_bg"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
            app:shapeAppearanceOverlay="@style/CircleImage"
            app:srcCompat="@drawable/on4" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView14"
            android:layout_width="255dp"
            android:layout_height="241dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="4dp"
            android:adjustViewBounds="true"
            android:background="@color/lightGrey"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
            app:shapeAppearanceOverlay="@style/CircleImage"
            app:srcCompat="@drawable/on3" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView15"
            android:layout_width="231dp"
            android:layout_height="220dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="76dp"
            android:adjustViewBounds="true"
            android:background="@color/categorybtn_bg"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearanceOverlay="@style/CircleImage"
            app:srcCompat="@drawable/on2" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/onboarding2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView13"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>